.NET Pipelines implemented

--- a/source/Backup/App.config
+++ b/source/Backup/App.config
@@ -3,4 +3,8 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+  <appSettings>
+    <add key="BufferSize" value="10"/>
+    <add key="BackupBaseFolder" value="backup"/>
+  </appSettings>
 </configuration>
