--- a/source/Backup/Backup.csproj
+++ b/source/Backup/Backup.csproj
@@ -33,6 +33,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -41,7 +42,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="NonBlockingConsole.cs" />
+    <Compile Include="BackupBusiness.cs" />
+    <Compile Include="FileBusiness.cs" />
+    <Compile Include="LogBusiness.cs" />
+    <Compile Include="LogLevel.cs" />
+    <Compile Include="LogType.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
