--- a/source/nuget.config
+++ b/source/nuget.config
@@ -1,3 +1,6 @@
-<settings>   
-	<repositoryPath>..\libraries</repositoryPath>
-</settings>
+<?xml version="1.0" encoding="utf-8"?>
+<configuration>
+    <config>
+    <add key="repositoryPath" value="..\libraries" />
+    </config>
+</configuration>
